# new_scripting_language

./: .gitignore  README.md
csrc/: alloc.c  alloc.h  array.h  ast.c  ast.h  bool.h  file.c  file.h  interpreter.c  interpreter.h  lenstring.h  lex.c  lex.h  log.h  main.c  meson.build  parse.c  parse.h  path.h  scriptfile.h  stringvector.h  vector.c  vector.h  which.h
dsrc/: default.nix  go  lenstring.c  main.d  meson.build  path.c  result  which.c
dsrc/nsl/: lex.d  log.d  parse.d  scriptfile.d
examples/: cleanup_bash  cleanup_newscript  hello_newscript
test/: b  c  d  e  f  g  h  i  j  k
